# spectral_lib_matcher

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  environment.yml  generate_individual_metadata.py  matchms_tuto.py  mgf_aggregator.py  nostdout.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  spectra_lib_matcher_bjo.py  spectral_lib_matcher.py  spectral_lib_matcher_indfiles.py
.github/workflows/: ci.yml  docker-testing.yml  link_check.yaml  versioning.yml
data/: METABOLOMICS-SNETS-V2-925c9e03-download_clustered_spectra-main.mgf  annotations.tsv  query.mgf
scripts/: binary_library_builder  processor  run_tests.sh
src/: binary_library_builder.py  processor.py  processor_gui.py  spectral_lib_matcher.py  spectral_lib_matcher_bckp.py
src/mandelbrot_spectral_lib_matcher/: __init__.py  binary.py  generate_individual_metadata.py  logBuilder.py  mgf_aggregator.py  nostdout.py  processor.py  spectral_lib_matcher_bckp.py  spectral_lib_matcher_indfiles.py  spectral_lib_matcher_par.py
tests/binary/: test_binary_format.py
tests/data/: database.mdbl  database.mgf  fake_sample.mgf
tests/matching/: test_spectra_lib_matcher.py  test_spectral_lib_matcher.py
