[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    spectrallibmatcher-processor = src.mandelbrot_spectral_lib_matcher.processor:main
    spectrallibmatcher-binary = src.mandelbrot_spectral_lib_matcher.binary:main

[check-manifest]
ignore =
    .travis.yml
    PKG-INFO
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo
    .git/*
