[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    spectrallibmatcher-processor = mandelbrot_spectral_lib_matcher.processor
    spectrallibmatcher-binary = mandelbrot_spectral_lib_matcher.binary

[check-manifest]
ignore =
    .travis.yml
    PKG-INFO
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo
    .git/*
